# Animation

./: .gitignore  CMakeLists.txt
Animation/: Animation.cpp  Animation.h  CMakeLists.txt
Animation/Objs/: ObjFactory.h
Animation/entities/: MovingSprite.h  Obj.cpp  Obj.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h
Animation/entities/interfaces/: Obstacle.h  Renderable.h  Texture.h
Animation/enums/: Direction.h  Surface.h
Animation/interfaces/: Repository.h
Animation/movingSprites/: MovingSprite.h  MovingSpriteRepository.h
Animation/obstacles/: Obstacle.h  ObstaclesService.h
Animation/players/: Player.cpp  Player.h  PlayerRepository.h
Animation/renderables/: CompareRenderables.h  Renderer.h
Animation/repositories/: ObjRepository.h  PlayerRepository.h  SpriteRepository.h  TextureRepository.cpp  TextureRepository.h
Animation/services/: MovablesService.h  ObjFactory.h  ObstaclesService.cpp  ObstaclesService.h  PlayerService.h  RenderablesService.cpp  RenderablesService.h  Renderer.h  SpriteFactory.h
Animation/sprites/: Sprite.cpp  SpriteFactory.h
Animation/textures/: TextureRepository.cpp  TextureRepository.h
Animation/utils/: CompareRenderables.h  CompareTexture.h  graphics.cpp  sdl_util.h  utils.cpp
